# rag-experiments

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  requirements.txt  run_smoke_test.py
configs/: comparison_config.yaml
rag_experiments/: __init__.py  config.py
rag_experiments/chunking/: __init__.py  base.py  fixed_size.py  hierarchical.py  semantic.py  sliding_window.py
rag_experiments/data/: __init__.py  loader.py  synthetic_qa.py
rag_experiments/evaluation/: __init__.py  benchmark.py  experiment_runner.py  metrics.py  profiler.py  reasoning.py
rag_experiments/indexing/: __init__.py  base.py  dense.py  hybrid.py  sparse.py
rag_experiments/retrieval/: __init__.py  base.py  compressor.py  hyde.py  query_expansion.py  reranker.py  router.py  rrf.py  weighted.py
rag_experiments/utils/: __init__.py  embeddings.py  logging.py
tests/: test_chunking.py  test_evaluation.py  test_retrieval.py
